--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,56 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Jason Sperske</title>
+
+    <script src='http://jason.sperske.com/js/jquery-1.11.0.min.js' type='text/javascript'></script>
+    <script src='http://jason.sperske.com/js/bootstrap.min.js' type='text/javascript'></script>
+    <link rel='stylesheet' href='http://jason.sperske.com/css/bootstrap.min.css' type='text/css' media='screen'/>
+    <link rel='stylesheet' href='http://jason.sperske.com/css/font-awesome.min.css' type='text/css' media='screen'/>
+    <link rel='stylesheet' href='http://jason.sperske.com/css/sperske.css' type='text/css' media='screen'/>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-51349156-1', 'sperske.com');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
-    <%- body -%>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class='container'>
+        <div class='navbar-header'>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class='navbar-brand' href='http://sperske.com/'>Sperske</a>
+        </div>
+        <div class='collapse navbar-collapse'>
+          <ul class='nav navbar-nav'>
+            <li class='active'><a href='/'>Jason</a></li>
+            <li><a href='/'>Genoa</a></li>
+            <li><a href='/'>Piper</a></li>
+            <li><a href='/'>Miles</a></li>
+            <li><a href='/'>Scout</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <%- body -%>
+    </div>
+    <div id="footer">
+      <div class="container">
+        <p class="text-muted">&copy; Sperske Family 2020</p>
+      </div>
+    </div>
   </body>
 </html>
