--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,50 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Jason Sperske</title>
 
-    <script src='http://jason.sperske.com/js/jquery-1.11.0.min.js' type='text/javascript'></script>
-    <script src='http://jason.sperske.com/js/bootstrap.min.js' type='text/javascript'></script>
-    <link rel='stylesheet' href='http://jason.sperske.com/css/bootstrap.min.css' type='text/css' media='screen'/>
-    <link rel='stylesheet' href='http://jason.sperske.com/css/font-awesome.min.css' type='text/css' media='screen'/>
-    <link rel='stylesheet' href='http://jason.sperske.com/css/sperske.css' type='text/css' media='screen'/>
+    <script src='/static/js/sperske.min.js' type='text/javascript'></script>
+    <link rel='stylesheet' href='/static/css/sperske.min.css' type='text/css' media='screen'/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51349156-1"></script>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-51349156-1', 'sperske.com');
-      ga('send', 'pageview');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-51349156-1');
     </script>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class='container'>
-        <div class='navbar-header'>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class='navbar-brand' href='http://sperske.com/'>Sperske</a>
-        </div>
-        <div class='collapse navbar-collapse'>
-          <ul class='nav navbar-nav'>
-            <li class='active'><a href='/'>Jason</a></li>
-            <li><a href='/'>Genoa</a></li>
-            <li><a href='/'>Piper</a></li>
-            <li><a href='/'>Miles</a></li>
-            <li><a href='/'>Scout</a></li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class='navbar-brand' href='http://sperske.com/'>Sperske</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Jason <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="/">Genoa</a></li>
+          <li class="nav-item"><a class="nav-link" href="/">Piper</a></li>
+          <li class="nav-item"><a class="nav-link" href="/">Miles</a></li>
+          <li class="nav-item"><a class="nav-link" href="/">Scout</a></li>
+        </ul>
       </div>
-    </div>
-    <div class="container">
+    </nav>
+    <main role="main" class="container">
       <%- body -%>
-    </div>
-    <div id="footer">
+    </main>
+    <footer class="footer">
       <div class="container">
-        <p class="text-muted">&copy; Sperske Family 2020</p>
+        <span class="text-muted">&copy; Sperske Family 2020</span>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
