--- a/views/wad/index.ejs
+++ b/views/wad/index.ejs
@@ -10,8 +10,8 @@
 <div class="row">
   <div class="col-sm-9">
     <div class="hero-unit">
-      <h1>WADParser.py</h1>
-      <p>A fun experiement with Python to open up DOOM/Hexen WAD files and try and render them as SVG (still working out some bugs)</p>
+      <h1>C:\WADParser.py /?</h1>
+      <p>&nbsp;A fun experiement with Python to open up DOOM/Hexen WAD files and try and render them as SVG (still working out some bugs)</p>
     </div>
     <div class='row-fluid'>
       <div class="span12">
