--- a/views/wad/index.ejs
+++ b/views/wad/index.ejs
@@ -15,7 +15,7 @@
     </div>
     <div class='row-fluid'>
       <div class="span12">
-        C:\>dir /w
+        C:\>dir *.wad /w
         <br/>
         &nbsp;Volumn in drive C is SND_TST
         <br/>
