Fixed media paths, fixed soem broken links, fixed some data

--- a/views/grp/_id/index.ejs
+++ b/views/grp/_id/index.ejs
@@ -25,7 +25,7 @@
         <a name='<%=map%>'></a>
         <div class="thumbnail">
           <h3><%=map%></h3>
-          <img src='http://jason.sperske.com/grp/<%=name%>/<%=map%>.svg'/>
+          <img src='http://jason.sperske.com/media/grp/<%=name%>/<%=map%>.svg'/>
         </div>
       </div>
     </div>
@@ -44,9 +44,9 @@
         <div id="collapseHelp" class="panel-collapse collapse in">
           <div class="panel-body">
           <% if (!locals.isProtected) { %>
-            <a class="btn btn-primary btn-block" role="button" href="http://jason.sperske.com/wad/<%=name%>/<%=name%>">Download WAD</a>
+            <a class="btn btn-primary btn-block" role="button" href="http://jason.sperske.com/media/grp/<%=name%>/<%=name%>">Download GRP</a>
           <% } %>
-            <a class="btn btn-default btn-block" role="button" href="/wad/">Back</a>
+            <a class="btn btn-default btn-block" role="button" href="/grp/">Back</a>
           </div>
         </div>
       </div>
