--- a/views/grp/layout.ejs
+++ b/views/grp/layout.ejs
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WADParser.py</title>
+    <title>
+      <% if (locals.name) { %>
+        <%=name%>
+      <% } else { %>
+        GRPParser.py
+      <% } %>
+    </title>
 
     <script src='/static/wad/js/jquery-1.11.0.min.js' type='text/javascript'></script>
     <script src='/static/wad/js/bootstra.387/bootstrap.min.js' type='text/javascript'></script>
@@ -37,7 +43,7 @@
             <span class="sr-only">Toggle navigation</span>
             ≡
           </button>
-          <a class="navbar-brand" href="/wad/">LevelHUB</a>
+          <a class="navbar-brand" href="/grp/">LevelHUB</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
