--- a/views/wad/layout.ejs
+++ b/views/wad/layout.ejs
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WADParser.py</title>
+    <title>
+      <% if (locals.name) { %>
+        <%=name%>
+      <% } else { %>
+        WADParser.py
+      <% } %>
+    </title>
 
     <script src='/static/wad/js/jquery-1.11.0.min.js' type='text/javascript'></script>
     <script src='/static/wad/js/bootstra.387/bootstrap.min.js' type='text/javascript'></script>
