improved layout of some pages on smaller viewPorts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class="col-9">
+  <div class="col-md-9">
     <div class='row'>
       <div class="col">
         <h1>Jason Sperske</h1>
@@ -13,7 +13,7 @@
     </div>
     <div class='row'>
     <% projectsStarted.forEach((project) => { %>
-      <div class="col-6">
+      <div class="col-lg-6">
         <div class="card">
           <div class="card-header"><%=project.name%> (<%=project.yearsActive%>)</div>
           <div class="card-body">
@@ -38,7 +38,7 @@
     </div>
     <div class='row'>
     <% projectsPersonal.forEach((project) => { %>
-      <div class="col-6">
+      <div class="col-lg-6">
         <div class="card">
           <div class="card-header"><%=project.name%></div>
           <div class="card-body">
