--- a/views/project/_id/index.ejs
+++ b/views/project/_id/index.ejs
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class="col-9">
+  <div class="col-md-9">
     <h1><%=name%></h1>
     <h2>What Is It?</h2>
     <% if (locals.videos) { %>
