--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,11 @@
 
     <script src='/static/js/sperske.min.js' type='text/javascript'></script>
     <link rel='stylesheet' href='/static/css/sperske.min.css' type='text/css' media='screen'/>
+  <% if (locals.dataPath && dataPath) { %>
+    <link rel='alternate' href='/<%=dataPath%>/index.json' type='application/json'/>
+  <% } else { %>
+    <link rel='alternate' href='/index.json' type='application/json'/>
+  <% } %>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51349156-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
