--- a/views/wad/layout.ejs
+++ b/views/wad/layout.ejs
@@ -11,7 +11,9 @@
         WADParser.py
       <% } %>
     </title>
-
+    <% if (locals.dataPath && dataPath) { %>
+      <link rel='alternate' href='/<%=dataPath%>/index.json' type='application/json'/>
+    <% } %>
     <script src='/static/wad/js/jquery-1.11.0.min.js' type='text/javascript'></script>
     <script src='/static/wad/js/bootstra.387/bootstrap.min.js' type='text/javascript'></script>
     <link rel='stylesheet' href='/static/wad/css/bootstra.387/css/bootstrap.css' type='text/css' media='screen' />
