--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,25 @@
 
     <div class='row'>
       <div class="col">
+        <h2>Projects I have worked on</h2>
+      </div>
+    </div>
+    <div class='row'>
+    <% projectsProfessional.forEach((project) => { %>
+      <div class="col-lg-6">
+        <div class="card">
+          <div class="card-header"><%=project.name%> (<%=project.duration%>)</div>
+          <div class="card-body">
+            <p class="card-text"><%-project.description%></p>
+            <a href='project/<%=project.id%>' class='btn btn-primary'>learn more</a>
+          </div>
+        </div>
+      </div>
+    <% }) %>
+    </div>
+
+    <div class='row'>
+      <div class="col">
         <h2>Things I have done for no good reason</h2>
       </div>
     </div>
