--- a/views/adventure/_id/index.ejs
+++ b/views/adventure/_id/index.ejs
@@ -1,5 +1,5 @@
-<script type='text/javascript' src="/static/js/adventure/PxLoader.js"></script>
-<script type='text/javascript' src="/static/js/adventure/PxLoaderImage.js"></script>
+<script type='text/javascript' src='/static/js/adventure/PxLoader.js'></script>
+<script type='text/javascript' src='/static/js/adventure/PxLoaderImage.js'></script>
 <script type='text/javascript' src='/static/js/adventure/adventure.js'></script>
 <style type='text/css'>
   #screen {
