--- a/views/wad/layout.ejs
+++ b/views/wad/layout.ejs
@@ -4,16 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-      <% if (locals.name) { %>
-        <%=name%>
-      <% } else { %>
-        WADParser.py
-      <% } %>
-    </title>
-    <% if (locals.dataPath && dataPath) { %>
-      <link rel='alternate' href='/<%=dataPath%>/index.json' type='application/json'/>
-    <% } %>
+    <title><% if (locals.name) { %><%=name%><% } else { %>WADParser.py<% } %></title>
+  <% if (locals.dataPath && dataPath) { %>
+    <link rel='alternate' href='/<%=dataPath%>/index.json' type='application/json'/>
+  <% } %>
     <script src='/static/wad/js/jquery-1.11.0.min.js' type='text/javascript'></script>
     <script src='/static/wad/js/bootstra.387/bootstrap.min.js' type='text/javascript'></script>
     <link rel='stylesheet' href='/static/wad/css/bootstra.387/css/bootstrap.css' type='text/css' media='screen' />
@@ -58,7 +52,7 @@
       <%- body -%>
     </div>
     <footer>
-      <p class="text-muted">&copy; Sperske Family 2020 - using the excellent <a href='https://github.com/kristopolous/BOOTSTRA.386'>BOOTSTRA.386 v3</a> theme by <a href='http://getpostdelete.com/'>Chris McKenzie</a></p>
+      <p class="text-muted">&copy; Sperske Family 2021 - using the excellent <a href='https://github.com/kristopolous/BOOTSTRA.386'>BOOTSTRA.386 v3</a> theme by <a href='http://getpostdelete.com/'>Chris McKenzie</a></p>
     </footer>
     </div>
   </body>
