--- a/views/grp/layout.ejs
+++ b/views/grp/layout.ejs
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="project-src" content="https://github.com/jasonsperske/website"/>
+    <meta name="project-src-base" content="https://github.com/jasonsperske/website/blob/master"/>
+    <meta name="project-src-component" content="{'LAYOUT':'/views/grp/layout.ejs'}"/>
+    <% if (locals.maps) { %><meta name="project-src-component" content="{'VIEW':'/views/grp/_id/index.ejs'}"/><% } %>
     <title><% if (locals.name) { %><%=name%><% } else { %>GRPParser.py<% } %></title>
   <% if (locals.dataPath && dataPath) { %>
+    <meta name="project-src-component" content="{'DATA': '/data/<%=dataPath%>/index.json'}"/>
     <link rel='alternate' href='/<%=dataPath%>/index.json' type='application/json'/>
   <% } %>
     <script src='/static/wad/js/jquery-1.11.0.min.js' type='text/javascript'></script>
