--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,14 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Jason Sperske</title>
+    <meta name="project-src" content="https://github.com/jasonsperske/website"/>
+    <meta name="project-src-base" content="https://github.com/jasonsperske/website/blob/master"/>
+    <meta name="project-src-component" content="{'LAYOUT':'/views/layout.ejs'}"/>
+    <% if (locals['project-src']) { %>
+      <% Object.keys(locals['project-src']).forEach((key) => { %>
+        <% if (locals['project-src'][key] instanceof Array) { %>
+          <% locals['project-src'][key].forEach((value) => { %>
+            <meta name="project-src-<%=key%>" content="<%-value%>"/>
+          <% }) %>
+        <% } %>
+      <% }) %>
+    <% } %>
 
     <script src='/static/js/sperske.min.js' type='text/javascript'></script>
     <link rel='stylesheet' href='/static/css/sperske.min.css' type='text/css' media='screen'/>
   <% if (locals.dataPath && dataPath) { %>
+    <meta name="project-src-component" content="{'DATA': '/data/<%=dataPath%>/index.json'}"/>
     <link rel='alternate' href='/<%=dataPath%>/index.json' type='application/json'/>
   <% } else { %>
+    <meta name="project-src-component" content="{'DATA': '/data/index.json'}"/>
     <link rel='alternate' href='/index.json' type='application/json'/>
   <% } %>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51349156-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
